# substrate-api-client

./: Cargo.toml
client-keystore/: Cargo.toml
src/: events.rs  lib.rs
src/examples/: example_account.rs  example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_contract.rs.DEPRECATED  example_custom_client.rs  example_custom_storage_struct.rs.DEPRECATED  example_event_callback.rs  example_event_error_details.rs  example_generic_event_callback.rs  example_generic_extrinsic.rs  example_get_blocks.rs  example_get_existential_deposit.rs  example_get_storage.rs  example_print_metadata.rs  example_signature.rs  example_sudo.rs  example_system.rs  example_template.rs  example_template1.rs  example_template2.rs  example_template_ed25519.rs  example_template_eth.rs  example_test.rs  example_transfer.rs  example_transfer_ecdsa.rs  example_transfer_ecdsa2.rs  example_transfer_ed25519.rs
src/extrinsic/: accounts.rs  balances.rs  contract.rs  mod.rs  staking.rs  system.rs  template.rs  xt_primitives.rs
src/std/: mod.rs  node_metadata.rs
src/std/rpc/: json_req.rs  mod.rs
src/std/rpc/ws_client/: client.rs  events.rs  mod.rs
test_no_std/: Cargo.toml
tutorials/: README.md
tutorials/api-client-tutorial/: Cargo.toml
tutorials/api-client-tutorial/src/: main.rs
