[package]
name = "api-client-tutorial"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
substrate-api-client = { path = "../.." }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }

[dependencies.sp-core]
git = "https://github.com/patractlabs/substrate.git"
branch = "vertic/mvp0"

[dependencies.keyring]
git = "https://github.com/patractlabs/substrate.git"
branch = "vertic/mvp0"
package = "sp-keyring"
